--- a/education.html
+++ b/education.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title>The best Web Designer in Kota Bharu</title>
+    <title>Education</title>
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
-<h1>The best web designer</h1>
+<h1>Education</h1>
 
 <a href="index.html">Home</a>
 <a href="biodata.html">About me</a>
@@ -14,8 +14,6 @@
 <a href="education.html">Education</a>
 <a href="myhobby.html">My Hobby</a>
 <a href="contact.html">Contact Me</a>
-
-
 
 
 </body>
